# resumate

./: .antigravityrules  .gitignore  CLAUDE.md  DEPLOYMENT.md  LICENSE  NEXT_FIXES.md  QUICKSTART.md  README.md  docker-compose.yml  master-resume_CV.yaml  master-resume_CV.yaml.example  reference_stitch_html.html  render.yaml  restart.py  resume-tailor-helper.md  settings_stitch_html.html  start_dev.py  temp.html
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02a8265e2e41_add_usercontext_model.py  973a8c08eb72_initial_migration.py  a1b2c3d4e5f6_add_color_to_applications.py  a3f1b2c4d5e6_versioning_and_tailor_rules.py  a784bc0753de_add_access_codes_table.py  b1c2d3e4f5a6_add_questions_settings_location.py  b2c3d4e5f6a7_multi_user_baseline.py  c0ea2c519fe7_add_interview_models.py  c3d4e5f6a7b8_add_ghost_fields_to_applications.py  c4d5e6f7a8b9_multi_user_schema_adjust.py  d4e5f6a7b8c9_add_pdf_path_and_rendered_at_to_versions.py  d5e6f7a8b9c0_merge_branches.py  e1a2b3c4d5e6_pdf_rendered_at_tz.py  e2f3a4b5c6d7_add_application_credentials_table.py  e6f7a8b9c0d1_post_migration_fixes.py  f1a2b3c4d5e6_add_resume_templates.py  f2b3c4d5e6a7_applications_user_id_not_null.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/cli/: manage.py  migrate_to_cloud.py
backend/app/models/: __init__.py  access_code.py  application.py  application_credential.py  application_question.py  base.py  (+11 more)
backend/tests/: conftest.py  test_interviews.py  test_models.py  test_resume_templates.py
(+185 files in other folders)
