[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "resumate-backend"
version = "0.1.0"
description = "Backend for ResuMate Career OS"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "boto3>=1.34.0",
    "rendercv[full]==2.3",
    "requests",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "sentry-sdk[fastapi]>=2.0.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests",
]
python_files = "test_*.py"
